# openstack-fip-dns-reconciler

./: .dockerignore  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish-artifacts.yml
deploy/kolla/: README.md
deploy/systemd/: openstack-fip-dns-reconciler.service
docker/: Dockerfile
src/openstack_fip_dns_reconciler/: __init__.py
src/openstack_fip_dns_reconciler/application/ports/: __init__.py  dns_record_repository.py  floating_ip_event_source.py  floating_ip_metadata_repository.py  floating_ip_repository.py  project_repository.py
src/openstack_fip_dns_reconciler/application/services/: reconciliation_service.py
src/openstack_fip_dns_reconciler/config/: loader.py  settings.py
src/openstack_fip_dns_reconciler/domain/: __init__.py  exceptions.py
src/openstack_fip_dns_reconciler/domain/models/: dns_name.py  dns_record.py  floating_ip.py  project_identity.py  reconciliation_plan.py  record_ownership.py
src/openstack_fip_dns_reconciler/domain/services/: dns_label_generator.py  fqdn_builder.py  (+3 more)
src/openstack_fip_dns_reconciler/endpoints/: __init__.py  cli.py  worker.py
src/openstack_fip_dns_reconciler/infrastructure/: exceptions.py
src/openstack_fip_dns_reconciler/observability/: logging_config.py
tests/integration/: __init__.py  test_reconciliation_service_with_fakes.py
tests/unit/: test_config_loader.py  test_designate_dns_record_repository.py  test_dns_label_generator.py  test_fqdn_builder.py  test_ownership_parser.py  test_package.py  test_project_id_label_generator.py  test_reconciliation_planner.py
(+6 files in other folders)
